[metadata]
name = diseaz-dsapy
version = 0.0.5
author = Dmitry Azhichakov
author_email = dazhichakov@gmail.com
description = Simple basic framework for command-line tools
long_description = file: README.md
url = https://github.com/diseaz/dsapy
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    =src
packages = find:

[options.packages.find]
where=src

[flake8]
max-line-length = 120
exclude = .git,__pycache__,build,dist

[tool:pytest]
pythonpath = src

[mypy]
files = src/dsapy
